Update Function Get Detail Scorecard by test_id
